# OpenZhiXue

./: .env.example  .gitignore  License.md  README.md  SECURITY.md  TERMS_OF_SERVICE.md  TERMS_OF_SERVICE_EN.md
.github/workflows/: ci.yml
.trae/documents/: admin-system-enhancement-plan.md  native-app-rewrite-plan.md  remove-docker-config-plan.md  remove-docker-summary.md  start-backend-server-plan.md  student-app-enhancement-plan.md
.trae/specs/admin-system/: checklist.md  spec.md  tasks.md
.trae/specs/ai-paper-analysis/: checklist.md  spec.md  tasks.md
.trae/specs/create-openzhixue-platform/: checklist.md  spec.md  tasks.md
.trae/specs/student-mobile-app/: checklist.md  spec.md  tasks.md
backend/admin-service/: go.mod  go.sum
backend/admin-service/config/: config.yaml
backend/ai-paper-analysis/: .env.example  pyproject.toml  requirements.txt
backend/ai-paper-analysis/app/: config.py  main.py
backend/ai-paper-analysis/app/models/: __init__.py  analysis_task.py  question.py
backend/ai-paper-analysis/app/routers/: __init__.py  analysis.py  ocr.py  tasks.py  upload.py
backend/ai-paper-analysis/app/schemas/: __init__.py  analysis.py  ocr.py  task.py  upload.py
backend/ai-paper-analysis/app/services/: __init__.py  ai_service.py  document_service.py  ocr_service.py  storage_service.py  task_processor.py  task_service.py
backend/ai-paper-analysis/app/utils/: __init__.py  prompts.py  redis_client.py
backend/ai-paper-analysis/tests/: conftest.py  test_ai_service.py  test_model_loading.py
backend/api-gateway/: go.mod  go.sum
backend/api-gateway/cmd/: main.go
backend/api-gateway/config/: config.go  config.yaml
backend/auth-service/: go.mod  go.sum
backend/auth-service/config/: config.yaml
backend/communication-service/: build.gradle.kts  settings.gradle.kts
backend/exam-service/: go.mod  go.sum
backend/exam-service/config/: config.yaml
backend/grade-service/: .env.example  pyproject.toml  requirements.txt
backend/grade-service/app/: config.py  database.py  main.py  mongodb.py  redis_client.py
backend/grade-service/app/models/: __init__.py  exam.py  grade.py  grade_analysis.py  subject.py
backend/grade-service/app/routers/: __init__.py  analysis.py  exam_management.py  exams.py  grades.py  reports.py  students.py  subjects.py
backend/grade-service/app/schemas/: __init__.py  analysis.py  common.py  exam.py  grade.py  report.py  subject.py
backend/grade-service/app/services/: __init__.py  analysis_service.py  exam_service.py  grade_service.py  report_service.py  subject_service.py
backend/grade-service/app/utils/: __init__.py  cache.py  helpers.py
backend/grade-service/tests/: __init__.py  conftest.py  test_analysis.py  test_exams.py  test_grade_service.py  test_grades.py  test_service_integration.py  test_subjects.py
backend/homework-service/: Cargo.toml
backend/homework-service/src/: config.rs  db.rs  error.rs  error_tests.rs  main.rs
backend/homework-service/src/handlers/: grade.rs  homework.rs  mod.rs  submission.rs
backend/homework-service/src/middleware/: auth.rs  logging.rs  mod.rs
backend/homework-service/src/models/: grade.rs  homework.rs  homework_tests.rs  mod.rs  submission.rs
backend/homework-service/src/repository/: grade.rs  homework.rs  mod.rs  submission.rs
backend/homework-service/src/services/: grade.rs  homework.rs  homework_tests.rs  mod.rs  submission.rs
backend/learning-service/: README.md  alembic.ini  requirements.txt
backend/learning-service/alembic/: env.py
backend/learning-service/app/: config.py  database.py  main.py
backend/learning-service/tests/: conftest.py  test_courses.py  test_learning.py  test_learning_service.py  test_reports.py
backend/student-service/: .env.example  pyproject.toml  requirements.txt
backend/student-service/app/: config.py  database.py  main.py
backend/student-service/app/models/: __init__.py  class_model.py  student.py  student_profile.py
backend/student-service/app/routers/: __init__.py  class_router.py  student_profile_router.py  student_router.py
backend/student-service/app/schemas/: __init__.py  class_schema.py  student.py  student_profile.py
backend/student-service/app/services/: __init__.py  class_service.py  student_profile_service.py  student_service.py
backend/student-service/app/utils/: __init__.py  response.py
backend/student-service/tests/: test_integration.py  test_main.py  test_student_service.py
backend/tests/integration/: api_integration_test.go
frontend/mobile/: .gitignore  analysis_options.yaml  pubspec.yaml
frontend/mobile-native/android/: build.gradle.kts  (+1 more)
frontend/web/: next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
infrastructure/scripts/: reset-db.sh  start-dev.sh  stop-dev.sh
(+265 files in other folders)
