[package]
name = "homework-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-web-httpauth = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
jsonwebtoken = "9.2"
bcrypt = "0.15"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
